# DistributedRTDataProcessing

./: .gitignore  CMakeLists.txt  README.md
Component1/src/data_ingestion/kafka_producer/: producer.cpp
Component1/src/iot_device/: client.cpp
Component2/SparkKafkaConsumer/src/main/resources/: log4j2.properties
DistributedRTDataProcessing/: .gitignore  CMakeLists.txt
DistributedRTDataProcessing/src/: CMakeLists.txt  main.cpp
DistributedRTDataProcessing/src/data_ingestion/: CMakeLists.txt  server.cpp
DistributedRTDataProcessing/src/data_ingestion/asio_receiver/: server.cpp
DistributedRTDataProcessing/src/data_ingestion/kafka_producer/: CMakeLists.txt  producer.cpp
DistributedRTDataProcessing/src/iot_device/: CMakeLists.txt  client.cpp
SparkKafkaConsumer/: .gitignore  pom.xml
SparkKafkaConsumer/src/main/java/: SparkKafkaConsumer.java
src/: CMakeLists.txt  main.cpp
src/asio_server/: CMakeLists.txt  server.cpp  server.h
src/client/: CMakeLists.txt  client.cpp
src/iot_device/: CMakeLists.txt  client.cpp  client.h
src/kafka/consumer/: CMakeLists.txt  consumer.c  consumer.h
src/kafka/producer/: producer.cpp  producer.h
src/server/: CMakeLists.txt  server.cpp
